[package]
name = "chat_protocol"
version = "1.0.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "chat_protocol"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
#mainnet = []
#devnet = []
localhost = []

[dependencies]
anchor-lang = { version = "0.31.1" }
anchor-spl = { version = "0.31.1" }
solana-security-txt = "1.1.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("anchor-debug", "custom-panic", "custom-heap"))', 'cfg(target_os, values("solana"))'] }